--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   animated_text_kit:
   flutter_screenutil:
   percent_indicator:
+  google_nav_bar:
 
 dev_dependencies:
   flutter_test:
