--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   percent_indicator:
   google_nav_bar:
   fl_chart:
+  liquid_progress_indicator_v2:
 
 dev_dependencies:
   flutter_test:
